--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^2.2.0",
     "particles.js": "^2.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
