--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "typing-animation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fcor.github.io/typing-animation",
   "dependencies": {
     "animejs": "^2.2.0",
+    "gh-pages": "^1.1.0",
     "particles.js": "^2.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -14,6 +16,8 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
